curl.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: curl
  name: curl
spec:
  containers:
  - command:
    - sleep
    - infinity
    image: ghcr.io/alexhanl/curl:latest
    name: curl
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
