httpbin.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
spec:
  rules:
  - host: httpbin.demo.corp.tanzu
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: httpbin
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  # type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: ghcr.io/alexhanl/httpbin:1.5
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
