my-web-demo.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myweb-ingress
spec:
  rules:
  - host: myweb.demo.corp.tanzu
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myweb
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: myweb
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: myweb

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myweb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myweb
  template:
    metadata:
      labels:
        app: myweb
    spec:
      containers:
      - name: myweb
        image: ghcr.io/alexhanl/my-web-demo:1.0.0
        ports:
        - containerPort: 8080
