simple-web-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-web-app-ingress
spec:
  rules:
  - host: simple-web.demo.corp.tanzu
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simple-web-app
            port:
              number: 80
---

apiVersion: v1
kind: Service
metadata:
  name: simple-web-app
spec:
  # type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: simple-web-app
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name:  simple-web-app
  labels:
    app:  simple-web-app
spec:
  selector:
    matchLabels:
      app: simple-web-app
  replicas: 2
  template:
    metadata:
      labels:
        app:  simple-web-app
    spec:
      containers:
      - name:  simple-web-app
        image:  ghcr.io/alexhanl/simple-web-app:1.1
        ports:
        - containerPort: 80
